argocd/infra/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: pillguide.site
      http:
        paths:
          - path:  /argocd
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: http
